# expecto-spectrum

./: README.md  main.py  pyproject.toml
ai/: llm.py
apps/JobApplications/models/: SyncApplicationModels.py
apps/JobApplications/services/: SyncApplicationService.py
apps/JobPostings/: JobPosting.py  README.md
apps/JobPostings/services/AIJobMatching/: AIJobMatching.py  ai-job-matching-prompt-template.txt  system-prompt.txt
apps/JobPostings/services/JobBoards/: LinkedIn.py
apps/ResumeGeneration/: ResumeGeneration.py  resume-prompt-template.txt
cronjobs/: CronJobs.py  jobs.json  jobs.py
utils/: logger.py
