[project]
name = "expecto-spectrum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.3",
    "groq>=1.4.0",
    "imap-tools>=1.13.0",
    "mongoengine>=0.29.3",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
